made padding a little larger removed some unnecesary things in _config.yml# Please enter the commit message for your changes. Lines starting hid the second down arrow when on a smaller screen: It's intrusive to the experience since the second and third page kinda merge together on mobile# with '#' will be ignored, and an empty message aborts the commit. made the third page nicer on desktop view.# On branch master the first page slogan was too large on smaller screens. I've reduced the size of the slogan on smaller screens to try fix this problem

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -45,7 +45,7 @@ $break-large: 1024px;
 $sidebar-width: 10vw !default;
 $footer-height: 15vh;
 
-$horizontal-padding: 20px;
-
 $font-color: #fff;
 $social-icon-size: 48px;
+
+$section-padding: 48px;
