--- a/assets/main.scss
+++ b/assets/main.scss
@@ -54,6 +54,8 @@ ul {
     left: 4px;
     cursor: pointer;
     text-decoration: underline;
+    @include respond-to(handhelds) { display: none; }
+    @include respond-to(medium-screens) { display: none; }
 }
 
 
@@ -96,6 +98,19 @@ ul {
     text-align: center;
     justify-content: center;
     padding: 20px;
+
+    @include respond-to(handhelds) {
+        h1 {
+            font-size: $h3-font-size;
+            line-height: 1.5rem;
+        }
+    }
+    @include respond-to(medium-screens) {
+        h1 {
+            font-size: $h3-font-size;
+            line-height: 1.5rem;
+        }
+    }
 }
 
 #information {
@@ -106,23 +121,34 @@ ul {
         .row {
             flex-direction: column;
         }
+
+        .down-arrow {
+            display: none;
+        }
+
         height: 100%;
     }
     @include respond-to(medium-screens) {
+        height: 100%;
+
+        .down-arrow {
+            display: none;
+        }
+
         .row {
             flex-direction: column;
         }
-        height: 100%;
     }
+
     @include respond-to(wide-screens) {
         .long-blurb {
-            width: 50vw;
+            width: 40vw;
         }
+
         #mentors {
             width: 25vw;
         }
     }
-
     #social-icons {
         a { text-decoration: none; }
 
@@ -153,11 +179,19 @@ ul {
     }
     @include respond-to(wide-screens) {
         main {
-            width: 50vw;
+            min-width: 20vw;
+            max-width: 40vw;
         }
         aside {
             width: 25vw;
             text-align: right;
+        }
+        .container {
+            margin-bottom: 30vh;
+            justify-content: center;
+            .row {
+                justify-content: center;
+            }
         }
     }
 }
@@ -165,7 +199,15 @@ ul {
 .container {
     display: flex;
     flex-direction: column;
-    padding: 32px 32px 0 32px;
+    @include respond-to(handhelds) {
+        padding: $section-padding/4 $section-padding/4 0 $section-padding/4;
+    }
+    @include respond-to(medium-screens) {
+        padding: $section-padding/2 $section-padding/2 0 $section-padding/2;
+    }
+    @include respond-to(wide-screens) {
+        padding: $section-padding $section-padding 0 $section-padding;
+    }
     width:100%;
 }
 
